# dmalloc

./: Makefile.am  Makefile.in  arg_check.c  arg_check.h  autogen.sh  chunk.c  chunk_loc.h  compat.h  conf.h.in  configure.ac  dmalloc.c  dmalloc.h  dmalloc.pc.in  dmalloc_argv.c  dmalloc_fc_t.c  dmalloc_loc.h  dmalloc_t.c  dmalloc_tab.c  dmalloc_tab_loc.h  env.c  error.c  error.h  heap.c  malloc.c  return.h
contrib/: Xmalloc.c
